--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,74 +1,41 @@
 version: '3.8'
 
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: filecabinet-web:latest
-    restart: unless-stopped
-    ports:
-      - "5000:5000"
-    volumes:
-      - file_storage:/app/uploads
-    environment:
-      - FLASK_ENV=production
-      - SECRET_KEY=${SECRET_KEY:-default_secret_key}
-      - DATABASE_URL=mysql+pymysql://${DB_USER}:${DB_PASSWORD}@db/${DB_NAME}
-      - MAX_CONTENT_LENGTH=16777216  # 16MB
-    depends_on:
-      db:
-        condition: service_healthy
-    networks:
-      - app_network
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
   db:
-    image: registry.cn-hangzhou.aliyuncs.com/mysql/mysql:8.0
-    restart: unless-stopped
+    image: mysql:8.0
+    restart: always
     environment:
-      - MYSQL_RANDOM_ROOT_PASSWORD=yes
-      - MYSQL_DATABASE=${DB_NAME:-filecabinet}
-      - MYSQL_USER=${DB_USER:-dbuser}
-      - MYSQL_PASSWORD=${DB_PASSWORD:-dbpass}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "3306:3306"
-    networks:
-      - app_network
+      - ./database:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "${DB_USER:-dbuser}", "-p${DB_PASSWORD:-dbpass}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
-    deploy:
-      resources:
-        limits:
-          cpus: '1'
-          memory: 1G
-    command: [
-      '--character-set-server=utf8mb4',
-      '--collation-server=utf8mb4_unicode_ci',
-      '--default-authentication-plugin=mysql_native_password'
-    ]
 
-networks:
-  app_network:
-    driver: bridge
+  web:
+    build: .
+    restart: always
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./uploads:/app/uploads
+    environment:
+      - DB_HOST=db
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - SECRET_KEY=${SECRET_KEY}
+      - FLASK_ENV=${FLASK_ENV}
+      - MAX_CONTENT_LENGTH=${MAX_CONTENT_LENGTH}
+    depends_on:
+      db:
+        condition: service_healthy
 
 volumes:
   mysql_data:
-    driver: local
-  file_storage:
-    driver: local
